--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "509c2e0f",
+   "id": "f7c9d4dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e666690",
+   "id": "d589d947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67b1dee8",
+   "id": "b67fc287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82893b5e",
+   "id": "688612d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,27 +47,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f93c9d54",
+   "id": "e8290ff3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin  763104351884.dkr.ecr.us-east-1.amazonaws.com"
+    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 763104351884.dkr.ecr.us-east-1.amazonaws.com"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a9ab36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker build -t ciao:mondo -f Dockerfile.train ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0ec8cef",
+   "id": "4b020639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +67,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ac4c29",
+   "id": "37e54d02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker build -t 319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo -f Dockerfile.train ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b6b5061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38f7af67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +100,7 @@
     "hyperparameters={'epochs': 1}\n",
     "\n",
     "estimator=Estimator(\n",
-    "    image_uri='ciao:mondo',\n",
+    "    image_uri='319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo',\n",
     "    role=role,\n",
     "    instance_count=1,\n",
     "    instance_type='local',\n",
@@ -99,14 +109,14 @@
     ")\n",
     "\n",
     "print('##### ESTIMATOR FIT STARTED')\n",
-    "estimator.fit('file://{}/data/input/train.csv'.format(os.getcwd()))\n",
+    "estimator.fit('file://{}/data/input/abalone.data'.format(os.getcwd()))\n",
     "print('##### ESTIMATOR FIT COMPLETED')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc6afc76",
+   "id": "07acb4da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,17 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfaadc69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!SM_MODEL_DIR=\"./data/output\" python main.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e78d6da",
+   "id": "bf15c937",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c31120a",
+   "id": "d14bea14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "# Specify an image name\n",
+    "image_name=tensorflow-training\n",
+    "echo \"image_name: ${image_name} ######################\"\n",
+    "\n",
+    "account=$(aws sts get-caller-identity --query Account --output text)\n",
+    "echo \"account: ${account} ######################\"\n",
+    "\n",
+    "# Get the region defined in the current configuration (default to us-west-2 if none defined)\n",
+    "region=$(aws configure get region)\n",
+    "echo \"region: ${region} ######################\"\n",
+    "\n",
+    "fullname=\"${account}.dkr.ecr.${region}.amazonaws.com/${image_name}:2.12.0-cpu-py310-pluto-2\"\n",
+    "echo \"fullname: ${fullname} ######################\"\n",
+    "\n",
+    "aws ecr describe-repositories --repository-names \"${image_name}\"\n",
+    "if [ $? -ne 0 ]\n",
+    "then\n",
+    "aws ecr create-repository --repository-name \"${image_name}\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957207f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin  319840978863.dkr.ecr.us-east-1.amazonaws.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c50b43b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4818e9b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker tag ciao:mondo 319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b194da58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7c56c22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker push 319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b8e648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker import get_execution_role\n",
+    "from sagemaker.estimator import Estimator\n",
+    "import os\n",
+    "\n",
+    "role=get_execution_role()\n",
+    "\n",
+    "hyperparameters={'epochs': 1}\n",
+    "\n",
+    "estimator=Estimator(\n",
+    "    image_uri='319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo',\n",
+    "    role=role,\n",
+    "    instance_count=1,\n",
+    "    instance_type='ml.p2.xlarge',\n",
+    "    hyperparameters=hyperparameters,\n",
+    "    output_path='s3://itsar123-larocca/data/output/'\n",
+    ")\n",
+    "\n",
+    "print('##### ESTIMATOR FIT STARTED')\n",
+    "estimator.fit('s3://itsar123-larocca/data/input/train.csv')\n",
+    "print('##### ESTIMATOR FIT COMPLETED')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09e61268",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -158,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
